--- a/src/MatdaAIga.Generator/MatdaAIga.Generator.csproj
+++ b/src/MatdaAIga.Generator/MatdaAIga.Generator.csproj
@@ -2,13 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Statiq.Web" Version="1.0.0-beta.60" />
+    <PackageReference Include="Statiq.Web" Version="$(StatiqWebVersion)" />
   </ItemGroup>
 
 </Project>
