Add AfterBuild trigger event

--- a/.github/workflows/publish-gh-pages.yaml
+++ b/.github/workflows/publish-gh-pages.yaml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
       - 'feature/*'
+      - 'hotfix/*'
     paths:
       - 'src/MatdaAIga.Generator/**'
   pull_request:
