--- a/src/MatdaAIga.Generator/input/pages/links.yaml
+++ b/src/MatdaAIga.Generator/input/pages/links.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../links/schema/links.yaml.json
+# yaml-language-server: $schema=https://matdaaiga.kr/schema/links.yaml.json
 
 name: 맞다AI가 인스타그램 프로필 링크
 
@@ -9,3 +9,5 @@ links:
 - title: 경북 AI 개발자 부트캠프 후기
   url: https://matdaaiga.kr/2025/02/21/gyeongbuk-ai-devleoper-bootcamp-retro
   image_url: /images/posts/2025/02/gyeongbuk-ai-developer-bootcamp-retro-00.jpg
+- title: Semantic Kernel 워크샵 리포지토리
+  url: https://github.com/matdaaiga-kr/semantic-kernel-workshp
