--- a/src/MatdaAIga.LinkConverter/MatdaAIga.LinkConverter.csproj
+++ b/src/MatdaAIga.LinkConverter/MatdaAIga.LinkConverter.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageReference Include="YamlDotNet" Version="13.3.1" />
   </ItemGroup>
 
   <ItemGroup>
