--- a/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
+++ b/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
@@ -7,7 +7,8 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="$(CoverletCollectorVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
-    <PackageReference Include="xunit" Version="$(XUnitVersion)" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XUnitVersion)" />
   </ItemGroup>
 
