[task/23] Shoudly 패키지 버전 : 컨벤션과 동일하도록 수정

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,5 +10,6 @@
     <MicrosoftNetTestSdkVersion>17.*</MicrosoftNetTestSdkVersion>
     <StatiqWebVersion>1.*-*</StatiqWebVersion>
     <XUnitVersion>2.*</XUnitVersion>
+    <ShouldlyVersion>4.*</ShouldlyVersion>
   </PropertyGroup>
 </Project>
