--- a/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
+++ b/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
@@ -14,6 +14,14 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+    <Content Include="files\**\*">
+      <Link>copy\%(RelativeDir)%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\src\MatdaAIga.Generator\input\pages\**\*">
+      <Link>copy\pages\%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
