--- a/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
+++ b/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
@@ -15,11 +15,11 @@
   <ItemGroup>
     <Using Include="Xunit" />
     <Content Include="files\**\*">
-      <Link>copy\%(RelativeDir)%(Filename)%(Extension)</Link>
+      <Link>%(RelativeDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\src\MatdaAIga.Generator\input\pages\**\*">
-      <Link>copy\pages\%(Filename)%(Extension)</Link>
+      <Link>pages\%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
