[task/23] Theory 특성을 이용해 테스트코드 수정

--- a/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
+++ b/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
@@ -14,13 +14,8 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
-    <Content Include="files\**\*">
-      <Link>%(RelativeDir)%(Filename)%(Extension)</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\src\MatdaAIga.Generator\input\pages\**\*">
-      <Link>pages\%(Filename)%(Extension)</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="files\*.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
