[task/23] InvalidSegmentCounts 테스트 추가

--- a/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
+++ b/tests/MatdaAIga.LinkConverter.Tests/MatdaAIga.LinkConverter.Tests.csproj
@@ -14,6 +14,9 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="files\*.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
