--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,5 +10,8 @@
     <MicrosoftNetTestSdkVersion>17.*</MicrosoftNetTestSdkVersion>
     <StatiqWebVersion>1.*-*</StatiqWebVersion>
     <XUnitVersion>2.*</XUnitVersion>
+    
+    <NSubstituteVersion>5.*</NSubstituteVersion>
+    <ShouldlyVersion>4.*</ShouldlyVersion>
   </PropertyGroup>
 </Project>
