Feature/46 loadasync 구현 (#51)
* yaml schema configuration

* loadasync()

* fix: underscored naming, YamlDotNet version

* fix: line arrange

* test1

* test:invaalid filepath

* test with image url

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,6 +12,7 @@
     <StatiqWebVersion>1.*-*</StatiqWebVersion>
     <ShouldlyVersion>4.*</ShouldlyVersion>
     <XUnitVersion>2.*</XUnitVersion>
+    <YamlDotNetVersion>16.*</YamlDotNetVersion>
     
   </PropertyGroup>
 </Project>
