--- a/src/MatdaAIga.LinkConverter/MatdaAIga.LinkConverter.csproj
+++ b/src/MatdaAIga.LinkConverter/MatdaAIga.LinkConverter.csproj
@@ -13,6 +13,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Content Include="../MatdaAIga.Generator/input/pages/links.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
