[bug/54] csproj 수정 : ItemGroup 분리

--- a/src/MatdaAIga.LinkConverter/MatdaAIga.LinkConverter.csproj
+++ b/src/MatdaAIga.LinkConverter/MatdaAIga.LinkConverter.csproj
@@ -13,6 +13,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="../MatdaAIga.Generator/input/pages/links.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
