Update GHA workflow

--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,12 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: 맞다AI가 4월 밋업
+  url: https://bit.ly/matdaaiga-2025-04
+  image_url: /images/posts/2025/04/matdaaiga-2025-04-meetup-00.png
+- title: 글로벌 AI 부트캠프 - 대구 후기
+  url: https://matdaaiga.kr/2025/03/31/global-ai-bootcamp-daegu-2025-retro
+  image_url: /images/posts/2025/03/global-ai-bootcamp-daegu-2025-retro-00.jpg
 - title: 글로벌 AI 부트캠프 - 대구
   url: https://www.meetup.com/global-ai-daegu/events/305181250
   image_url: https://secure.meetupstatic.com/photos/event/2/7/f/a/600_525310234.webp?w=750
