--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,9 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: 맞다AI가 5월 밋업
+  url: https://bit.ly/matdaaiga-2025-05
+  image_url: /images/posts/2025/05/이미지 제목.png
 - title: 맞다AI가 4월 밋업 후기
   url: https://matdaaiga.kr/2025/04/30/matdaaiga-2025-04-meetup-retro
   image_url: /images/posts/2025/04/이미지 제목.png
