--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,12 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: Global AI GitHub Copilot Bootcamp - Daegu
+  url: https://bit.ly/globalai-ghcp-bootcamp-register2025
+  image_url: /images/posts/2025/06/global-ai-github-copilot-bootcamp-daegu-2025-00.jpg
+- title: 맞다AI가 5월 밋업 후기
+  url: https://matdaaiga.kr/2025/05/28/matdaaiga-2025-05-meetup-retro
+  image_url: /images/posts/2025/05/matdaaiga-2025-05-meetup-retro-00.jpg
 - title: 맞다AI가 5월 밋업
   url: https://bit.ly/matdaaiga-2025-05
   image_url: /images/posts/2025/05/matdaaiga-2025-05-meetup-00.jpg
