--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,9 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: Global AI GitHub Copilot Bootcamp - Daegu - 후기
+  url: https://matdaaiga.kr/2025/06/25/globalai-ghcp-bootcamp-2025-retro
+  image_url: /images/posts/2025/06/global-ai-github-copilot-bootcamp-daegu-2025-retro-00.jpg
 - title: Global AI GitHub Copilot Bootcamp - Daegu
   url: https://bit.ly/globalai-ghcp-bootcamp-register2025
   image_url: /images/posts/2025/06/global-ai-github-copilot-bootcamp-daegu-2025-00.jpg
