--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,9 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: 맞다AI가 8월 밋업 후기
+  url: https://matdaaiga.kr/2025/08/29/matdaaiga-2025-08-meetup-retro
+  image_url: /images/posts/2025/08/matdaaiga-2025-08-meetup-retro-00.jpeg
 - title: 맞다AI가 8월 밋업
   url: https://bit.ly/matdaaiga-2025-08
   image_url: /images/posts/2025/08/matdaaiga-2025-08-meetup-00.jpg
