Global AI VS Code dev day blog

--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,8 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: Global AI VS Code dev day - Daegu
+  url: https://bit.ly/globalai-vscode-devday-register2025
 - title: 맞다AI가 8월 밋업 후기
   url: https://matdaaiga.kr/2025/08/29/matdaaiga-2025-08-meetup-retro
   image_url: /images/posts/2025/08/matdaaiga-2025-08-meetup-retro-00.jpeg
