2025-09 retro blog posting

--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,9 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: Global AI VS Code dev day - Daegu - 후기
+  url: https://bit.ly/globalai-vscode-devday-register2025-retro
+  image_url: /images/posts/2025/09/global-ai-vscode-devday-daegu-2025-retro-00.jpeg
 - title: Global AI VS Code dev day - Daegu
   url: https://bit.ly/globalai-vscode-devday-register2025
 - title: 맞다AI가 8월 밋업 후기
