--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,8 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: 맞다AI가 10월 밋업 후기
+  url: https://matdaaiga.kr/2025/10/22/matdaaiga-2025-10-meetup-retro
 - title: 맞다AI가 10월 밋업
   url: https://bit.ly/matdaaiga-2025-10
 - title: Global AI VS Code dev day - Daegu - 후기
