--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,8 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: 맞다AI가 1월 밋업
+  url: https://bit.ly/matdaagia-2026-01
 - title: 맞다AI가 11월 밋업 후기
   url: https://matdaaiga.kr/2025/11/26/matdaaiga-2025-11-meetup-retro
   image_url: /images/posts/2025/11/matdaaiga-2025-11-meetup-retro-00.jpeg
