발표자료 링크 추가

--- a/src/MatdaAIga.Generator/settings.yml
+++ b/src/MatdaAIga.Generator/settings.yml
@@ -22,6 +22,7 @@ PostSources: posts/**/*
 IsPost: => Context.Outputs.FilterSources(Context.GetString("PostSources")).ContainsById(Document)
 PageSources: pages/**/*
 IsPage: => Context.Outputs.FilterSources(Context.GetString("PageSources")).ContainsById(Document)
+AdditionalInputFiles: archived/**/*
 # GenerateSearchIndex: true # Setting this to false disables both the search box in navigation bar and the search page
 
 # Page settings
