--- a/src/MatdaAIga.Generator/input/links/links.yaml
+++ b/src/MatdaAIga.Generator/input/links/links.yaml
@@ -3,6 +3,9 @@
 name: 맞다AI가 인스타그램 프로필 링크
 
 links:
+- title: Open UP 오픈소스 커뮤니티 밋업 참석기
+  url: https://matdaaiga.kr/2026/01/30/matdaaiga-2026-01-openup
+  image_url: /images/posts/2026/01/matdaaiga-2026-01-openup-00.png
 - title: 맞다AI가 2월 밋업
   url: https://bit.ly/matdaaiga-2026-02
 - title: 맞다AI가 1월 밋업 후기
